# s2p

./: .gitignore  CLAUDE.md  Cargo.toml
examples/: tcp_connect_example.rs
src/: async_stream.rs  iroh_stream.rs  lib.rs  main.rs  message_types.rs
src/codec/: decoder.rs  encoder.rs  mod.rs  types.rs
src/iroh/: client.rs  dns_resolver.rs  handler.rs  mod.rs  node_authenticator.rs  socket_factory.rs  tcp_client.rs  tcp_handler.rs  types.rs  udp_handler.rs
tests/: integration_test.rs
