[package]
name = "s2p"
version = "0.0.1"
edition = "2024"

[lib]
name = "s2p"
path = "src/lib.rs"

[dependencies]
thiserror = "2.0.15"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.10.1"
iroh = "0.91.1"
n0-future = "0.2.0"
env_logger = "0.11.6"
pin-project = "1.1.10"
tracing = "0.1.41"
tokio-stream = "0.1.17"
tracing-subscriber = "0.3"
hex = "0.4.3"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[example]]
name = "tcp_connect_example"
path = "examples/tcp_connect_example.rs"