[package]
name = "s2p"
version = "0.0.2"
edition = "2024"

[lib]
name = "s2p"
path = "src/lib.rs"

[dependencies]
derive_builder = "0.20.2"
thiserror = "2.0.15"
tokio = { version = "1.0", features = ["net", "io-util", "time", "sync"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.10.1"
iroh = "0.91.1"
n0-future = "0.2.0"
pin-project = "1.1.10"
tracing = "0.1.41"
tokio-stream = "0.1.17"

# Optional dependencies for examples and full functionality
env_logger = { version = "0.11.6", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[features]
default = []
examples = ["env_logger", "tracing-subscriber", "tokio/rt-multi-thread", "tokio/macros"]
full = ["examples"]

[dev-dependencies]
env_logger = "0.11.6"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

[[example]]
name = "tcp_connect_example"
path = "examples/tcp_connect_example.rs"