[package]
name = "s2p"
version = "0.0.2"
edition = "2021"
description = "A simple-proxy-protocol networking library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/s2p"
readme = "README.md"
keywords = ["networking", "async", "peer-to-peer"]
categories = ["network-programming", "asynchronous"]
rust-version = "1.75"

[lib]
name = "s2p"
path = "src/lib.rs"

[dependencies]
derive_builder = "0.20"
thiserror = "2.0"
tokio = { version = "1.0", features = ["net", "io-util", "time", "sync"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"
iroh = "0.91"
n0-future = "0.2"
pin-project = "1.1"
tracing = "0.1"
tokio-stream = "0.1"

# Optional dependencies for examples and full functionality
env_logger = { version = "0.11", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[features]
default = []
examples = ["env_logger", "tracing-subscriber", "tokio/rt-multi-thread", "tokio/macros"]
full = ["examples"]

[dev-dependencies]
env_logger = "0.11"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

[[example]]
name = "tcp_connect_example"
path = "examples/tcp_connect_example.rs"
required-features = ["examples"]